# ifc-lite

./: .cursorrules  .gitattributes  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTORS.md  Cargo.toml  DOCS-UPDATE-PLAN.md  GEOMETRY_FIX_PLAN.md  IFC-Lite Explained Simply.md  IMPLEMENTATION_GUIDE.md  LICENSE  LICENSE_HEADER.md  PERFORMANCE_SUMMARY.md  PLAN-dynamic-tile-server.md  PLAN.md  PLAN_COMPARISON.md  PROGRESS.md  Project Materials.md  README.md  RELEASE.md  SCRIPTING-PLATFORM-PLAN.md  START.md  STREAMING_PIPELINE_PLAN.md  WEB_IFC_REPLACEMENT_PLAN.md  What-is-a-floor-plan-with-dimensions.walls.txt  build-wasm.sh  compare-web-ifc.cjs  debug-railing.mjs  feasability.md  mkdocs.yml  package.json  plan-export.md  plan.md  playwright.config.cjs  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  (+12 more)
.cargo/: config.toml
.changeset/: add-cesium-integration.md  add-cli-package.md  add-diff-clash-features.md  add-encoding-and-lists-packages.md  add-topology-crate.md  add-viewer-enhancements.md  advanced-face-improvements.md  annotation-selection.md  babylonjs-viewer-template.md  basket-multi-isolation.md  basket-presentation-refactor.md  bcf-3d-overlay-markers.md  bcf-integration.md  bcf-overlay-opt-in-toggle.md  bcf-overlay-xss-fix.md  brave-foxes-swim.md  bright-foxes-heal.md  bright-radios-nail.md  bright-schools-shout.md  bright-walls-glow.md  brown-cats-play.md  bug-fixes-color-visibility.md  clean-console-dx.md  cli-3d-viewer.md  config.json  coop-coep-headers.md  cpu-raycasting.md  curvy-parrots-collect.md  curvy-tigers-attend.md  dark-books-grab.md  double-escape-close-panels.md  eleven-tigers-tell.md  enable-visibility-filter-default.md  expand-spatial-visibility.md  feat-scripting-platform.md  feat-system-color-scheme.md  federated-visibility-fix.md  five-apples-think.md  five-rivers-breathe.md  fix-app-version-define.md  (+93 more)
.claude/: settings.local.json
.github/workflows/: desktop-compat.yml  docker.yml  docs.yml  publish.yml  release.yml  server-binaries.yml  test-templates.yml
Georeference/: 240918_CBB-F11-AF.ifc  CBB-F10-AF_GRef.ifc
api/: chat-handler.ts  chat.test.ts  chat.ts
apps/api/: package.json  tsconfig.json  vercel.json
apps/desktop/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/server/: .dockerignore  Cargo.toml  Dockerfile  railway.toml
apps/viewer/: .env.development  .env.example  .env.production  CHANGELOG.md  index.html  package.json  test-setup.mjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1773590420934-3b67edf33b5fb8.mjs
apps/viewer-embed/: CHANGELOG.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
demo/: viewer-demo.sh
deploy/: CHECKLIST.md  COMPLETION_STATUS.md  DEPLOYMENT_SUMMARY.md  README.md  SETUP.md  VERCEL_ENV_VARS.md  complete-setup.sh
docker/: benchmark.py
docs/: GEOREFERENCING_DESIGN.md  IFC5-SUPPORT-PLAN.md  OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  cylinder-geometry-root-cause.md  ifc-coverage-comparison.md  index.md  server-analytics-architecture.md  superset-integration-plan.md  superset-native-plugin-research.md
docs/api/: wasm.md  (+1 more)
plan/: GEOMETRY_EXPANSION_PLAN.md  README.md  SCHEMA_GENERATION_COMPARISON.md  UNIFIED_ROADMAP.md
prototype/: .gitignore  README.md  index.html  package-lock.json  package.json  run-spikes.js  tsconfig.json  vite.config.ts
rust/: test_real_ifc.rs
rust/core/: Cargo.toml
rust/core/examples/: test_real_ifc.rs
rust/core/src/: decoder.rs  error.rs  fast_parse.rs  georef.rs  legacy_entities.rs  lib.rs  model_bounds.rs  parser.rs  schema.rs  schema_gen.rs  streaming.rs  units.rs
rust/core/tests/: test_real_ifc.rs
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs
rust/geometry/: Cargo.toml
rust/geometry/examples/: color_extraction_test.rs
rust/geometry/src/: bool2d.rs  csg.rs  error.rs  extrusion.rs  lib.rs  mesh.rs  processors.rs  profile.rs  profile_extractor.rs  profiles.rs  router.rs  transform.rs  triangulation.rs  void_analysis.rs  void_index.rs
rust/geometry/src/processors/: advanced.rs  advanced_face.rs  boolean.rs  brep.rs  extrusion.rs  helpers.rs  mapped.rs  mod.rs  surface.rs  swept.rs  tessellated.rs  tests.rs
rust/geometry/src/router/: caching.rs  clipping.rs  mod.rs  processing.rs  tests.rs  transforms.rs  voids.rs  voids_2d.rs
rust/geometry/tests/: ar_wall_test.rs  covering_debug.rs  csg_void_test.rs  test_geometry.rs  test_infra_rtc.rs  test_materials_ifc.rs  test_tekla.rs  tun32_bt2_test.rs  tun32_multilayer_test.rs
rust/pdf-vision/: Cargo.toml
rust/pdf-vision/examples/: test_pipeline.rs
rust/pdf-vision/src/: building_generator.rs  image_ops.rs  lib.rs  line_ops.rs  room_detector.rs  types.rs  wall_detector.rs  wall_filter.rs
rust/topology/: Cargo.toml
rust/topology/src/: arena.rs  builders.rs  construction.rs  content.rs  dictionary.rs  error.rs  geometry.rs  graph.rs  keys.rs  lib.rs  query.rs  serialization.rs  spatial.rs  transform.rs  traversal.rs
rust/wasm-bindings/: Cargo.toml
rust/wasm-bindings/src/: api.rs  gpu_geometry.rs  lib.rs  pdf_vision.rs  utils.rs  zero_copy.rs
rust/wasm-bindings/src/api/: debug.rs  extract_profiles.rs  georef.rs  gpu_meshes.rs  mod.rs  parsing.rs  styling.rs  symbolic.rs  zero_copy_api.rs
scripts/: MATHIAS.txt  augment-epsg-proj4.ts  build-wasm.sh  bump-version.mjs  check-benchmark-regression.js  check-desktop-contract.mjs  debug-ar-geometry.mjs  debug-element-loss.mjs  debug-railing-geometry.mjs  dev-chat-api.ts  generate-bim-globals.ts  generate-epsg-index.ts  sync-root-version.js  sync-versions.js  test-ci-locally.sh  test-coverage.cjs  test-epsg-apis.sh  test-geometry-reference.mjs  test-geometry-regression.mjs  test-integration-pipeline.mjs  test-integration.mjs  test-wasm-contract.mjs  verify-npm-publish.js
test-results/: .last-run.json
tests/: debug-ar-discs.ts  debug-ar-geometry-wasm.ts  debug-ar-geometry.ts  debug-arc-calc.ts  debug-arc-calc2.ts  debug-arc-calc3.ts  debug-arc-calc4.ts  debug-wall-window.ts  integration.test.ts  logs.md  mutations.test.ts  test_geometry.rs
(+541 files in other folders)
