[workspace]
members = ["rust/core", "rust/geometry", "rust/wasm-bindings", "apps/server"]
resolver = "2"

[workspace.package]
version = "1.1.7"
edition = "2021"
authors = ["IFC-Lite Contributors"]
license = "MPL-2.0"
repository = "https://github.com/louistrue/ifc-lite"

[profile.release]
opt-level = 3           # Optimize for speed
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization (slower compile)
strip = true            # Strip symbols
panic = 'abort'         # Smaller panic handler
overflow-checks = false # Remove overflow checks in release

[profile.release.package."*"]
opt-level = 3
strip = true
