[package]
name = "ifc-lite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Parser
nom = "7.1"

# Error handling
thiserror = "1.0"

# Fast hashing
rustc-hash = "1.1"

# Optional: serialization
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]

[features]
default = []
serde = ["dep:serde"]
