[package]
name = "ifc-lite-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stable backend-neutral IFC engine facade built on the shared processing pipeline"

[dependencies]
ifc-lite-processing.workspace = true
memmap2 = "0.9.10"
serde = { version = "1.0", features = ["derive"] }
