[package]
name = "ifc-lite-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for IFC-Lite"
keywords = ["ifc", "bim", "wasm", "webassembly", "aec"]
categories = ["wasm", "parsing"]
readme = "../../README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--enable-simd",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
futures-util = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
ifc-lite-core = { version = "1.1.6", path = "../core" }
ifc-lite-geometry = { version = "1.1.6", path = "../geometry" }
js-sys = "0.3"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
